# rst-music

./: .env.sample  Cargo.toml  readme.md
src/: config.rs  error.rs  main.rs  types.rs
src/commands/: mod.rs
src/commands/music/: command.rs  mod.rs  types.rs  utils.rs
src/commands/test/: command.rs
src/commands/weather/: command.rs
src/services/: mod.rs
src/services/country/: api.rs  types.rs
src/services/lavalink/: handlers.rs
src/services/open_weather/: api.rs  types.rs
