[package]
name = "rst-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
envy = "0.4.2"
futures = "0.3.30"
log = { version = "0.4.21", features = ["serde"] }
poise = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
